--- a/.github/workflows/main_agranelos.yml
+++ b/.github/workflows/main_agranelos.yml
@@ -11,37 +11,36 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_NAME: agranelos # set this to your function app name on Azure
-  PACKAGE_DIRECTORY: '.' # set this to the directory which contains pom.xml file
-  JAVA_VERSION: '11' # set this to the java version to use
+  PACKAGE_DIRECTORY: "." # set this to the directory which contains pom.xml file
+  JAVA_VERSION: "11" # set this to the java version to use
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: 'Checkout GitHub Action'
+      - name: "Checkout GitHub Action"
         uses: actions/checkout@v4
 
       - name: Setup Java Sdk ${{ env.JAVA_VERSION }}
         uses: actions/setup-java@v1
-        with: |+
+        with:
           java-version: ${{ env.JAVA_VERSION }}
 
-      - name: 'Restore Project Dependencies Using Mvn'
+      - name: "Restore Project Dependencies Using Mvn"
         shell: pwsh
         run: |+
           pushd './${{ env.PACKAGE_DIRECTORY }}'
           mvn clean package
           popd
-      
-      - name: 'Run Azure Functions Action'
+
+      - name: "Run Azure Functions Action"
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'agranelos'
-          slot-name: 'Production'
-          package: '${{ env.PACKAGE_DIRECTORY }}'
+          app-name: "agranelos"
+          slot-name: "Production"
+          package: "${{ env.PACKAGE_DIRECTORY }}"
           respect-pom-xml: true
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_233EB9B85DE548C18A928AC4CADA2CCE }}
-          sku: 'flexconsumption'
-        
+          sku: "flexconsumption"
