--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Azure Functions
+name: Build, Test, and Deploy Java project to Azure Function App - agranelos
 
 on:
   push:
@@ -7,14 +7,15 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: "."
+  AZURE_FUNCTIONAPP_NAME: agranelos
+  PACKAGE_DIRECTORY: "."
   JAVA_VERSION: "11"
 
 jobs:
-  build-and-test:
+  build-test-deploy:
     runs-on: ubuntu-latest
     env:
       DB_HOST: ${{ secrets.DB_HOST }}
@@ -43,45 +44,28 @@ jobs:
 
       - name: Restore dependencies
         run: |
-          pushd $AZURE_FUNCTIONAPP_PACKAGE_PATH
+          pushd $PACKAGE_DIRECTORY
           mvn clean compile
           popd
 
       - name: Run tests
         run: |
-          pushd $AZURE_FUNCTIONAPP_PACKAGE_PATH
+          pushd $PACKAGE_DIRECTORY
           mvn test
           popd
 
       - name: Package application
         run: |
-          pushd $AZURE_FUNCTIONAPP_PACKAGE_PATH
+          pushd $PACKAGE_DIRECTORY
           mvn clean package
           popd
 
-      - name: Upload build artifact
-        if: github.ref == 'refs/heads/main'
-        uses: actions/upload-artifact@v4
+      - name: Deploy to Azure Functions
+        uses: Azure/functions-action@v1
         with:
-          name: java-app
-          path: target/azure-functions/${{ secrets.AZURE_FUNCTIONAPP_NAME }}
-
-  security-scan:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Java SDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: microsoft
-
-      - name: Run Security Scan
-        run: |
-          pushd $AZURE_FUNCTIONAPP_PACKAGE_PATH
-          mvn org.owasp:dependency-check-maven:check || true
-          popd
+          app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+          package: ${{ env.PACKAGE_DIRECTORY }}
+          respect-pom-xml: true
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_233EB9B85DE548C18A928AC4CADA2CCE }}
+          slot-name: Production
+          sku: flexconsumption
