Enhance GraphQL API and database schema for Bodega and Producto
- Updated Bodega and Producto models to include fechaActualizacion.
- Modified SQL queries to use consistent column naming conventions.
- Improved GraphQL schema to reflect changes in data types for timestamps.
- Added null analysis mode in settings for better Java configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
         </dependency>
         <dependency>
             <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-java-tools</artifactId>
-            <version>5.2.4</version>
+            <artifactId>graphql-java-extended-scalars</artifactId>
+            <version>20.2</version>
         </dependency>
     </dependencies>
 
