--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,27 @@
             <artifactId>graphql-java-extended-scalars</artifactId>
             <version>20.2</version>
         </dependency>
+
+        <!-- Azure Event Grid -->
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-messaging-eventgrid</artifactId>
+            <version>4.18.0</version>
+        </dependency>
+        
+        <!-- Azure Identity for authentication -->
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-identity</artifactId>
+            <version>1.11.0</version>
+        </dependency>
+
+        <!-- Azure Core -->
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-core</artifactId>
+            <version>1.45.0</version>
+        </dependency>
     </dependencies>
 
     <build>
