--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -9,16 +9,18 @@ on:
 
 env:
   JAVA_VERSION: '11'
-  DB_HOST: '50.19.86.166'
-  DB_PORT: '5432'
-  DB_NAME: 'inventario_agranelos'
-  DB_USER: 'postgres'
-  DB_PASSWORD: 'test-password'
-  DB_SSL_MODE: 'disable'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    env:
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_SSL_MODE: 'disable'
     
     steps:
     - name: '📥 Checkout repository'
