fix: Agregar branch sumativa-3-staging a CI y env vars DB a deploy workflow
- Agregar sumativa-3-staging a triggers de ci-test.yml
- Agregar variables de entorno DB a deploy-azure.yml usando secrets
- Crear script setup-github-secrets.sh para configurar secrets desde .env

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -2,9 +2,9 @@ name: CI - Build and Test
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, sumativa-3-staging ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, develop, sumativa-3-staging ]
   workflow_dispatch:
 
 env:
