--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -15,6 +15,14 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     
+    env:
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_SSL_MODE: 'disable'
+    
     steps:
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@v3
