fix: Actualizar nombre de directorio en CI workflow para coincidir con pom.xml
- Cambiar de 'inventario-functions-create-20250830112014764' a 'agranelos-inventario-functions'
- Agregar debug output para mostrar contenido de target/azure-functions/ si falla
- Ahora coincide con el cambio hecho en pom.xml (commit 0125ee9)

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -92,10 +92,13 @@ jobs:
       run: |
         echo "Verifying Azure Functions structure..."
         
-        FUNCTION_DIR="target/azure-functions/inventario-functions-create-20250830112014764"
+        FUNCTION_DIR="target/azure-functions/agranelos-inventario-functions"
         
         if [ ! -d "$FUNCTION_DIR" ]; then
           echo "❌ Azure Functions directory not found!"
+          echo "Expected: $FUNCTION_DIR"
+          echo "Contents of target/azure-functions/:"
+          ls -la target/azure-functions/ || echo "Directory doesn't exist"
           exit 1
         fi
         
