--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -41,12 +41,19 @@ jobs:
         mvn clean package
         popd
 
-    - name: 'Run Azure Functions Action'
-      uses: Azure/functions-action@v1
+    - name: 'Azure Login'
+      uses: azure/login@v1
       with:
-        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/target/azure-functions/agranelos-inventario-functions'
-        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_233EB9B85DE548C18A928AC4CADA2CCE }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: 'Deploy to Azure Functions'
+      run: |
+        cd target/azure-functions/agranelos-inventario-functions
+        zip -r ../deploy.zip .
+        az functionapp deployment source config-zip \
+          --resource-group agranelos \
+          --name ${{ env.AZURE_FUNCTIONAPP_NAME }} \
+          --src ../deploy.zip
 
     - name: 'Notify Deployment Success'
       if: success()
