fix: Correct package path in Azure-generated workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,8 +64,7 @@ jobs:
         uses: Azure/functions-action@v1
         with:
           app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-          package: ${{ env.PACKAGE_DIRECTORY }}
-          respect-pom-xml: true
+          package: ${{ env.PACKAGE_DIRECTORY }}/target/azure-functions/agranelos-inventario-functions
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_233EB9B85DE548C18A928AC4CADA2CCE }}
           slot-name: Production
           sku: flexconsumption
