--- a/local.settings.json.template
+++ b/local.settings.json.template
@@ -10,6 +10,9 @@
     "DB_PASSWORD": "<your-database-password>",
     "DB_SSL_MODE": "disable",
     "EVENT_GRID_ENDPOINT": "https://<your-eventgrid-topic>.eastus2-1.eventgrid.azure.net/api/events",
-    "EVENT_GRID_KEY": "<your-event-grid-access-key>"
+    "EVENT_GRID_KEY": "<your-event-grid-access-key>",
+    "SENDGRID_API_KEY": "<your-sendgrid-api-key>",
+    "SENDER_EMAIL": "<verified-sender-email@example.com>",
+    "RECIPIENT_EMAIL": "di.barros@duocuc.cl"
   }
 }
